# Mexmat

./: Readme.txt
Jordan/: .gitignore  Jordan.pro  Makefile  Readme.txt  data  jordan.cpp  jordan.h  main  main.cpp  matrix
OpenCV/: Readme.txt
OpenCV/cvVideo/: CMakeCache.txt  CMakeLists.txt  Makefile  VideoImage  VideoImage.cpp  cmake_install.cmake  leak.out  lol  lol.cpp  videofiltr  videofiltr.cpp  whiteCat.avi  whiteCat1.avi
OpenCV/cvVideo/TrianglSquare/: CMakeCache.txt  CMakeLists.txt  Makefile  TrianglSquare.pro  TrianglSquare.pro.user.f96372e.3.3-pre1  cmake_install.cmake  main  main.cpp
OpenCV/cvVideo/build-TrianglSquare-Desktop-Debug/: Makefile  TrianglSquare  leak.out
OpenCV/cvVideo/build-TrianglSquare-Desktop_Qt_5_8_0_GCC_64bit-Debug/: Makefile  TrianglSquare
OpenCV/firstExample/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake  leak.out
RotValues/: Readme.txt  RotValues.pro  func.cpp  func.h  main  main.cpp
