cmake_minimum_required(VERSION 2.8)
project( VideoImage.cpp )
find_package( OpenCV REQUIRED )
add_executable( VideoImage VideoImage.cpp )
target_link_libraries( VideoImage ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( videofiltr.cpp )
find_package( OpenCV REQUIRED )
add_executable( videofiltr videofiltr.cpp )
target_link_libraries( videofiltr ${OpenCV_LIBS} )

cmake_minimum_required(VERSION 2.8)
project( lol.cpp )
find_package( OpenCV REQUIRED )
add_executable( lol lol.cpp )
target_link_libraries( lol ${OpenCV_LIBS} )